Preventing automatic line breaks in a code tag
Following advice from:

stackoverflow.com/questions/16445229/prevent-automatic-line-breaks-in-a-code-tag#answer-16447619

--- a/buddycloud-theme/static/css/buddycloud-style.css
+++ b/buddycloud-theme/static/css/buddycloud-style.css
@@ -236,7 +236,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: 'Source Code Pro', Menlo, Monaco, Consolas, "Courier New", monospace;
+	font-family: 'Source Code Pro', Menlo, Monaco, Consolas, "Courier New", monospace;
 	font-weight: 500;
 }
 
@@ -257,6 +257,9 @@ code {
 	color: #2DAEBF;
 	background-color: rgba(45, 174, 191, .075);
 	padding: 0.2em;
+	white-space: pre;
+	word-break: normal;
+	word-wrap: normal;
 }
 
 .highlight {
@@ -300,6 +303,9 @@ code {
 .highlight pre code {
 //	color: hsl(0,0%,70%);
 	color: transparent;
+	white-space: pre;
+	word-break: normal;
+	word-wrap: normal;
 }
 
 .highlight pre .nt {
